--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.8"
 flask = "^2.3.2"
 bootstrap-flask = "^2.2.0"
+flask-wtf = "^1.1.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.0.0"
