--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ python = "^3.8"
 flask = "^2.3.2"
 bootstrap-flask = "^2.2.0"
 flask-wtf = "^1.1.1"
+flask-sqlalchemy = "^3.0.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.0.0"
 pytest-mock = "*"
-
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
