--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ flask = "^2.3.2"
 bootstrap-flask = "^2.2.0"
 flask-wtf = "^1.1.1"
 flask-sqlalchemy = "^3.0.3"
+flask-login = "^0.6.2"
+flask-migrate = "^4.0.4"
+email-validator = "^2.0.0.post2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^6.0.0"
